@startuml
' --- STIJL INSTELLINGEN ---
skinparam classAttributeIconSize 0
skinparam linetype ortho
skinparam shadowing false
skinparam packageStyle rectangle

' --- ENUMS ---
enum ReservationStatus {
    pending
    confirmed
    cancelled
}

' --- DATABASE CONTEXT ---
package "Database Layer" {
    class AppDbContext {
        +DbSet<User> Users
        +DbSet<Vehicle> Vehicles
        +DbSet<ParkingLot> ParkingLots
        +DbSet<Reservation> Reservations
        +DbSet<ParkingSessions> ParkingSessions
        +DbSet<Payment> Payments
        #OnModelCreating(mb)
    }
}

' --- MODELS (ENTITIES) ---
package "Models (Entities)" {
    class User {
        +int Id
        +string Username
        +string Password
        +string Name
        +string Email
        +string Phone
        +string Role
        +int BirthYear
        +bool Active
        +DateOnly CreatedAt
    }

    class Vehicle {
        +int Id
        +int UserId
        +string LicensePlate
        +string Make
        +string Model
        +string Color
        +int Year
        +DateOnly CreatedAt
    }

    class ParkingLot {
        +int Id
        +string Name
        +string Location
        +string Address
        +int Capacity
        +int Reserved
        +decimal Tariff
        +decimal? DayTariff
        +double Lat
        +double Lng
        +string Status
        +string ClosedReason
        +DateOnly? ClosedDate
    }

    class Reservation {
        +string Id
        +int UserId
        +int ParkingLotId
        +int VehicleId
        +DateTimeOffset StartTime
        +DateTimeOffset EndTime
        +ReservationStatus Status
        +decimal Cost
        +DateTimeOffset CreatedAt
    }

    class ParkingSessions {
        +int Id
        +int UserId
        +int VehicleId
        +string LicensePlate
        +DateTime StartTime
        +DateTime? EndTime
        +decimal? Cost
    }

    class Payment {
        +string Transaction
        +decimal Amount
        +string Initiator
        +string Method
        +string Issuer
        +string Bank
        +DateTimeOffset CreatedAt
        +DateTimeOffset CompletedAt
        +string Hash
    }
}

' --- DTOs (REQUESTS) ---
package "DTOs (Requests)" {
    class RegisterUserRequest {
        +Username
        +Password
        +Name
        +Email
        +PhoneNumber
        +BirthYear
    }
    class LoginRequest {
        +Username
        +Password
    }
    class ReservationRequest {
        +LicensePlate
        +StartDate
        +EndDate
        +ParkingLot
        +VehicleId
    }
    class ParkingLotCreate {
        +Name
        +Address
        +Capacity
        +Tariff
        +Lat
        +Lng
    }
    class StartStopSessionRequest {
        +LicensePlate
    }
    class UpdateProfileRequest {
        +Name
        +Email
        +PhoneNumber
    }
}

' --- HANDLERS (LOGICA) ---
package "API Handlers" {
    class UserHandlers <<static>> {
        +Register(RegisterUserRequest, db)
        +Login(LoginRequest, db, token)
    }

    class ProfileHandlers <<static>> {
        +GetProfile(http, db)
        +UpdateProfile(http, db, UpdateProfileRequest)
        +DeleteProfile(http, db)
    }

    class VehicleHandlers <<static>> {
        +CreateVehicle(http, vehicle, db)
        +GetMyVehicles(http, db)
        +UpdateVehicle(id, http, vehicle, db)
        +DeleteVehicle(id, http, db)
    }

    class ParkingLotHandlers <<static>> {
        +CreateParkingLot(ParkingLotCreate, db)
        +UpdateParkingLot(id, ParkingLotCreate, db)
        +DeleteParkingLot(id, db)
    }

    class ReservationHandlers <<static>> {
        +CreateReservation(http, ReservationRequest, db)
        +GetMyReservations(http, db)
        +CancelReservation(id, db)
        +UpdateReservation(id, db, ReservationRequest)
    }

    class SessionHandlers <<static>> {
        +StartSession(id, db, http, StartStopSessionRequest)
        +StopSession(id, db, http, StartStopSessionRequest)
    }

    class BillingHandlers <<static>> {
        +GetUpcomingPayments(user, db)
        +GetBillingHistory(user, db)
    }
    
    class PaymentHandler <<static>> {
        +GetPayments(http, db)
    }
}

' --- RELATIES ---

' Context bevat DbSets van Models
AppDbContext o-- User
AppDbContext o-- Vehicle
AppDbContext o-- ParkingLot
AppDbContext o-- Reservation
AppDbContext o-- ParkingSessions
AppDbContext o-- Payment

' Handlers gebruiken de AppDbContext en DTOs
UserHandlers ..> AppDbContext : uses
UserHandlers ..> RegisterUserRequest : uses
UserHandlers ..> LoginRequest : uses

ProfileHandlers ..> AppDbContext : uses
ProfileHandlers ..> UpdateProfileRequest : uses

VehicleHandlers ..> AppDbContext : uses

ParkingLotHandlers ..> AppDbContext : uses
ParkingLotHandlers ..> ParkingLotCreate : uses

ReservationHandlers ..> AppDbContext : uses
ReservationHandlers ..> ReservationRequest : uses

SessionHandlers ..> AppDbContext : uses
SessionHandlers ..> StartStopSessionRequest : uses

BillingHandlers ..> AppDbContext : uses
PaymentHandler ..> AppDbContext : uses

' Database Relaties (Foreign Keys)
Reservation "1" --> "1" User : UserId
Reservation "1" --> "1" ParkingLot : ParkingLotId
Reservation "1" --> "1" Vehicle : VehicleId

ParkingSessions "1" --> "1" User : UserId
ParkingSessions "1" --> "1" Vehicle : VehicleId

Vehicle "*" --> "1" User : UserId

@enduml